k8s/deploy-services/api-node/manifests/DB-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cosmosdb
spec:
  type: ExternalName
  externalName: <your-cosmosdb-account>.documents.azure.com
