k8s/deploy-services/api-node/manifests/movie-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: movie-api-service
spec:
  type: nodePort
  selector:
    app: movie-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
