k8s/deploy-services/api-node/manifests/netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: movie-api-netpol
spec:
  podSelector:
    matchLabels:
      app: movie-api
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    # allow traffic only from ingress controller namespace
    - namespaceSelector:
        matchLabels:
          name: ingress-nginx
    ports:
    - protocol: TCP
      port: 3000
  egress:
  # allow outbound internet (Cosmos DB is external)
  - to:
    - ipBlock:
        cidr: 0.0.0.0/0
    ports:
    - protocol: TCP
      port: 443
